--- a/KeyGenerator/KeyGenerator.csproj
+++ b/KeyGenerator/KeyGenerator.csproj
@@ -7,6 +7,7 @@
         <Nullable>enable</Nullable>
         <AssemblyVersion>0.1.0.0</AssemblyVersion>
         <FileVersion>1.0.0.0</FileVersion>
+        <ApplicationIcon>Images\KeyGeneratorIcon-1.ico</ApplicationIcon>
     </PropertyGroup>
 
     <ItemGroup>
