--- a/KeyGenerator/KeyGenerator.csproj
+++ b/KeyGenerator/KeyGenerator.csproj
@@ -12,6 +12,7 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
+        <PackageReference Include="MySql.Data" Version="8.0.33" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
         <PackageReference Include="NLog" Version="5.1.5" />
         <PackageReference Include="NLog.Schema" Version="5.1.5" />
